@@ -1,3 +1,4 @@
+- drop supermount support
 - diskdrake: drop "Rescue partition table" feature 
   (was based on rescuept which has been dropped in util-linux, but was quite
   bad compared to testdisk anyway)
